# aws_strands_agent

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/research_assistant/: agent.py
src/research_assistant/hooks/: __init__.py  logging_hook.py  rate_limiter.py
src/research_assistant/models/: __init__.py  research_output.py
src/research_assistant/tools/: __init__.py  note_taker.py  report_generator.py
